--- a/m04/cl11/mercado-liebre/views/home.html
+++ b/m04/cl11/mercado-liebre/views/home.html
@@ -16,6 +16,7 @@
             <li><a href="#">Tiendas Oficiales</a></li>
             <li><a href="#">Vender</a></li>
             <li><a href="#">Ayuda</a></li>
+            <div></div>
         </ul>
         <ul>
             <li><a href="#">Crea tu cuenta</a></li>
