--- a/m04/cl11/mercado-liebre/views/home.html
+++ b/m04/cl11/mercado-liebre/views/home.html
@@ -22,8 +22,8 @@
                 <div></div>
             </ul>
             <ul>
-                <li><a href="#">Crea tu cuenta<i class="far fa-id-card"></i></a></li>
-                <li><a href="#">Ingresa<i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="/register">Crea tu cuenta<i class="far fa-id-card"></i></a></li>
+                <li><a href="/login">Ingresa<i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="#">Mis Compras<i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
