--- a/m04/cl11/mercado-liebre/views/register.html
+++ b/m04/cl11/mercado-liebre/views/register.html
@@ -1,118 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="\css\style.css">
-    <link rel="stylesheet" href="\css\register.css">
-    <title>Mercado Liebre</title>
-</head>
-<body>
-    <header class="header">
-        <img src="\images\logo-mercado-liebre.svg" width="360" alt="Logo de MercadoLiebre">
-        <p><div class="search-bar"></div><i class="fas fa-search"></i></p>
-        <div><i class="fas fa-hand-holding-usd"></i> Compra en cuotas y sin tarjetas de credito</div>
-        <nav>
-            <ul>
-                <li><a href="#">Ofertas</a></li>
-                <li><a href="#">Tiendas Oficiales</a></li>
-                <li><a href="#">Vender</a></li>
-                <li><a href="#">Ayuda</a></li>
-                <div></div>
-            </ul>
-            <ul>
-                <li><a href="/register.html">Crea tu cuenta<i class="far fa-id-card"></i></a></li>
-                <li><a href="/login.html">Ingresa<i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="#">Mis Compras<i class="fas fa-shopping-basket"></i></a></li>
-            </ul>
-        </nav>
-        <div class="burger-menu">
-            <i class="fas fa-bars"></i>
-        </div>    
-    </header>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Bienvenidxs a MercadoLiebre</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="/css/register.css">
+    </head>
+    <body>
+        <header>
+            <div class="top-header">
+                <div class="logo"> 
+                    <img src="/images/logo-mercado-liebre.svg" alt="Logo de MercadoLiebre">
+                </div>
+                <form action="search" class="form-search">
+                    <input type="text" name="search" placeholder="Buscar productos, marcas y más">
+                    <i class="fas fa-search"></i>
+                </form>
+                <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Ofertas</a></li>
+                    <li><a href="#">Tiendas Oficiales</a></li>
+                    <li><a href="#">Vender</a></li>
+                    <li><a href="#">Ayuda</a></li>
+                </ul>
+                <ul>
+                    <li><a href="/register">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+                    <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                    <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
+                </ul>
+            </nav>
+            <div class="burger-menu">
+                <i class="fa fa-bars burger"></i>
+            </div>
+        </header>
+       
+        <main>
+            <form action="/register" method="POST" enctype="multipart/form-data"><!--Enctype se agrega solo si tenemos input de tipo file-->
+                
+                <div class="form-control">
+                    <label for="">Nombre y apellido</label>
+                    <input type="text" name="fullname">
+                </div>
 
-    <main>   
-        <form action="/register" method="POST" class="form" enctype="multipart/form-data">
+                <div class="form-control">
+                    <label for="">Email</label>
+                    <input type="email" name="email">
+                </div>
 
-            <div class="form-control">
-                <label for="">Nombre y apellido</label>
-                <input type="text" name="fullname">
-            </div>
+                <div class="form-control">
+                    <label for="">Fecha de nacimiento</label>
+                    <input type="date" name="">
+                </div>
 
-            <div class="form-control">
-                <label for="">Email</label>
-                <input type="email" name="email">
-            </div>
-            
-            <div class="form-control">
-                <label for="">Fecha de nacimiento</label>
-                <input type="date" name="nacimiento">
-            </div>
-            
-            <div class="form-control">
-                <label for="">Perfil de usuario</label>
-                <select name="perfil" id="">
-                    <option disabled selected>Selecciona una opcion</option>
-                    <option value="comprador">Comprador</option>
-                    <option value="vendedor">Vendedor</option>
-                </select>
-            </div>
-            
-            <div class="form-control">
-                <p>Categorias de interes</p>
-                <input type="checkbox" name="interes" value="electro" id="electro"><label for="electro">Electro</label>
-                <input type="checkbox" name="interes" value="moda" id="moda"><label for="moda">Moda</label>
-                <input type="checkbox" name="interes" value="healthy" id="healthy"><label for="healthy">Vida sana</label>
-            </div>
+                <div class="form-control">
+                    <label for="">Perfil de usuario</label>
+                    <select name="perfil">
+                        <option disabled selected>Seleccioná una opción</option>
+                        <option value="comprador">Comprador</option>
+                        <option value="vendedor">Vendedor</option>
+                    </select>
+                </div>
 
-            <div class="form-control">
-                <label for="">Avatar</label>
-                <input type="file" name="avatar">
-            </div>
+                <div class="form-control">
+                    <h4>Categorias de interes</h4>
+                    <input type="checkbox" name="interes" value="Electro" id="electro">
+                    <label for="electro">Electro</label>
 
-            <div class="form-control">
-                <label for="">Contraseña</label>
-                <input type="passwword" name="password">
-            </div>
+                    <input type="checkbox" name="interes" value="Moda" id="moda">
+                    <label for="moda">Moda</label>
 
-            <div class="form-control">
-                <label for="">Repetir contraseña</label>
-                <input type="password" name="repassword">
-            </div>
+                    <input type="checkbox" name="interes" value="healthy" id="healthy">
+                    <label for="healthy">Vida sana</label>
+                </div>
 
-            <button type="submit">Registrate</button>
-            <button type="reset">Borrar</button>
+                <div class="form-control">
+                    <label for="">Avatar</label>
+                    <input type="file" name="avatar">
+                </div>
 
-        </form>
-    </main>
+                <div class="form-control">
+                    <label for="">Contraseña</label>
+                    <input type="password" name="password">
+                </div>
 
-    <footer>
-        <section class="footer">
-            <div>
-                <i class="fas fa-credit-card"></i>
-                <h4>Pagá con tarjeta o en efectivo</h4>
-                <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-                puntos de pago. ¡Y siempre es seguro!
-                </p>
-            </div>
-            <div>
-                <i class="fas fa-gift"></i>
-                <h4>Envío gratis desde $2.500</h4>
-                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                    productos. Es un beneficio de Mercado Puntos.
-                </p>
-            </div>
-            <div>
-                <i class="fas fa-user-shield"></i>
-                <h4>Seguridad, de principio a fin</h4>
-                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                    porque estás siempre protegid@.
-                </p>
-            </div>
-            <div>Copyright &copy 1999-2020 MercadoLiebre S.R.L.</div>
-        </section>
-    </footer>
-</body>
+                <div class="form-control">
+                    <label for="">Repetir Contraseña</label>
+                    <input type="password" name="repassword">
+                </div>
+
+                <button type="submit" class="enviar">Registrate</button>
+                <button type="reset" class="borrar">Borrar</button>
+            </form>
+        </main>
+
+        <footer>
+            &copy
+        </footer>
+        
+    </body>
 </html>
