--- a/m04/cl11/mercado-liebre/public/css/register.css
+++ b/m04/cl11/mercado-liebre/public/css/register.css
@@ -6,11 +6,17 @@ form {
     align-items: center;
 }
 
+form h4 {
+    margin-bottom: 5px;
+}
+
 .form-control {
     width: 100%;
     flex-direction: column;
-    margin-bottom: 3px;
+    margin-bottom: 20px;
     padding: 10px;
+    background-color: white;
+    border-radius: 10px;
 }
 
 .form-control label {
@@ -18,26 +24,68 @@ form {
 }
 .form-control input {
     width: 100%;
-    transition: border 2s;
-}
-.form-control input:focus {
-    border: aqua 5px solid;
-    outline: none;
-}
-.form-control input:hover {
-    border: blue 5px solid;
+    border: none;
 }
 
 .enviar {
-    background-color: grey;
-    border-radius: 5px;
+    border-radius: 10px;
     padding: 5px;
 }
-.enviar:hover {
-    background-color: green;
-    color: indigo;
+
+.borrar{
+    border-radius: 10px;
 }
 
-.borrar {
+.enviar:hover {
+    background-color: green;
+}
+
+.borrar:hover {
     background-color: red;
+    border-radius: 10px;
+}
+
+.form-control .categorias-de-interes {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-control .categorias-de-interes label {
+    margin-left: 10px;
+    padding-top: 5px;
+}
+
+.form-control .categorias-de-interes input {
+   position: relative;
+   width: 13px;
+   height: 13px;
+}
+
+/* Login */
+
+.enviar-login {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    height: 5vh;
+    border-radius: 10px;
+    border: solid 0.5px black;
+    margin-bottom: 10px;
+}
+
+.enviar-login button {
+    width: 100%;
+    background: transparent;
+    border: none;
+    color: black;
+    font-weight: bold;
+}
+
+.enviar-login button:hover {
+    color: white;
+}
+
+.enviar-login:hover {
+    background-color:#0022AA ;
+    border: none;
 }
