--- a/m04/cl11/mercado-liebre/public/css/styles.css
+++ b/m04/cl11/mercado-liebre/public/css/styles.css
@@ -1,6 +1,7 @@
 *{
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
 body{
@@ -17,19 +18,22 @@ p{
 }
 div.top-header{
     padding: 5%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 header{
     background-color: #EAC926;
+    padding-bottom: 10px;
 }
 
 header div.logo{
     width: 50%;
+    padding: 10px;
+    align-items: center;
 }
 
-header div.logo{
-    padding: 10px;
-}
 header nav{
     font-size: 12px;
     display: none;
@@ -44,24 +48,37 @@ header ul li a{
     color: #000;
 }
 
-header .form .input{
-    background-color: #FFF;
-    border: 1px solid #000;
-    outline: none;
-    color: #666;
-    padding: 2px;
-}
-header .form .submit{
-    background-color: #FFF;
-    border: 1px solid #000;
-    color: #666;
-    width: 10%;
-}
 
 header div.top-header p{
     width: 100%;
     text-align: center;
     margin-top: 10px;
+}
+
+header div.form {
+    display: flex;
+    width: 50%;
+    height: 5vh;
+    background-color: white;
+    border-radius: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+header div.form .search-bar{
+    display: flex;
+    width: 100%;
+}
+
+header div.form .search-bar input {
+    border: none;
+    width: 100%;
+    padding-right: 10px;
+}
+
+header div.form .search-bar button {
+    background: white;
+    border: none;
 }
 
 div.burger-menu{
@@ -73,7 +90,7 @@ div.burger-menu i{
     border-radius: 5px;
     color: #FFF;
     font-size: 20px;
-    margin: 10px 0px 20px 0px;
+    margin: 10px 0px 10px 0px;
     padding: 10px;
 }
 
@@ -124,13 +141,15 @@ main section article i,
 main section article i{
     display: block;
     font-size: 16px;
-    padding: 10px;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
     border: 1px solid #39b54a;
     background-color: #FFF;
     border-radius: 50%;
     position: absolute;
-    right: 25px;
-    top: -20px;
+    right: 20px;
+    top: -15px;
 }
 
 main section h3{
@@ -140,7 +159,7 @@ main section h3{
 article div.main-article {
     width: 100%;
     border-top: 1px solid #ebebeb;
-    padding: 5px;
+    padding: 15px;
     position: relative;
 }
 .box-price {
@@ -154,7 +173,16 @@ article div.main-article {
 }
 @media (min-width: 361px){
     header nav{ 
-        display: block;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    header nav ul{
+        display: flex;
+    }
+
+    header nav ul li {
+        margin: 0px 10px 0px 10px;
     }
     .products {
         display: flex;
@@ -173,17 +201,38 @@ article div.main-article {
     main section article:hover {
         box-shadow: 0px 0px 25px rgb(100, 100, 100);
     }
+    div.burger-menu i{
+        display: none;
+    }
+
+    header .top-header {
+        flex-wrap: nowrap;
+        justify-content: space-around;
+    }
+
+    header .logo {
+        width: 100%;
+    }
+
+    header div.form {
+        width: 100%;
+    }
+
+    header p{
+        margin: 0;
+        align-items: center;
+    }
 }
 
 @media (min-width: 769px){
     .products article {
         width: 22%;
     }
+    div.burger-menu i{
+        display: none;
+    }
 }
 
-footer {
-    height: 20vh;
-}
 @import url('register.css');
 .form-search {
     width: 30%;
@@ -192,4 +241,42 @@ footer {
 .form-search input {
     border: none;
     outline: none;
+}
+
+.footer{
+    text-align: center;
+    width: 100%;
+    margin: 0 auto;
+    background-color: white;
+}
+
+.footer .footer-info {
+    display: flex;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.footer h4{
+    margin: 0px;
+}
+
+.footer p{
+    margin-top: 0px;
+}
+
+.footer i{
+    font-size: 2em;
+    margin-bottom: 10px;
+    margin-top: 40px;
+    color: #03264C;
+}
+
+.copyright {
+    display: flex;
+    font-size: 12.5px;
+    margin-top: 40px;
+    align-items: flex-start;
+    color: grey;
+    padding-bottom: 20px;
+    padding-left: 20px;
 }
