--- a/m04/cl11/mercado-liebre/views/home.html
+++ b/m04/cl11/mercado-liebre/views/home.html
@@ -15,8 +15,10 @@
                     <img src="/images/logo-mercado-liebre.svg" alt="Logo de MercadoLiebre">
                 </div>
                 <div class="form" action="#" method="GET">
-                    <div class="input">Buscar productos, marcas y más</div>
-                    <div class="submit"><i class="fa fa-search"></i></div>
+                    <div class="search-bar">
+                        <input placeholder="Buscar productos, marcas y más"></input>
+                        <button type="submit"><i class="fa fa-search"></i></button>
+                    </div>
                 </div>
                 <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
             </div>
@@ -141,8 +143,32 @@
             </section>
         </main>
         <footer>
-            
+            <section class="footer">
+                <div class="footer-info">
+                    <div>
+                        <i class="fas fa-credit-card"></i>
+                        <h4>Pagá con tarjeta o en efectivo</h4>
+                        <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                        puntos de pago. ¡Y siempre es seguro!
+                        </p>
+                    </div>
+                    <div>
+                        <i class="fas fa-gift"></i>
+                        <h4>Envío gratis desde $2.500</h4>
+                        <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                            productos. Es un beneficio de Mercado Puntos.
+                        </p>
+                    </div>
+                    <div>
+                        <i class="fas fa-user-shield"></i>
+                        <h4>Seguridad, de principio a fin</h4>
+                        <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                            porque estás siempre protegid@.
+                        </p>
+                    </div>
+                </div>    
+                <div class="copyright">Copyright &copy 1999-2020 MercadoLiebre S.R.L.</div>
+            </section>
         </footer>
-        
     </body>
 </html>
